fix more authelia secret stuff

--- a/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
@@ -5,12 +5,12 @@ metadata:
     namespace: auth
 type: Opaque
 stringData:
-    identity_validation.reset_password.jwt.hmac.key: ENC[AES256_GCM,data:EHuNU1g25EWcyMHPqfiYbQgq7x5l/OK6gv2VpZPl+AOPpqrsa1i0E+rZ1Fy2A24eDBFynxpl5SWobRL21ker2AfN9vXtJICeduW1bEHGoTzoeZITv++rIVke,iv:2dogqs7FdCMILfLODFOQ/HwoyyQNp18N8HchOHr0oO8=,tag:adBFpeN4OmgUbWDzrzOcZQ==,type:str]
-    session.encryption.key: ENC[AES256_GCM,data:qTWqDK4sLwHavgwL1M4SbZppLfBz4edueB6UG1/k,iv:/QnIiLm5DveNRTWRYiJ1nE44v0TYBFCeZLSXL101MZs=,tag:Spl2y5qG2C6men9v3yESPw==,type:str]
-    session.redis.password.txt: ENC[AES256_GCM,data:pQvd0okVUHBR4CrAvwJBwWSfBD5GkAbQ/3pT/rh0,iv:Ue+7SNUTsFwZKhlwgoBf5HDAccxiez/iwz8Eswzkzmk=,tag:m+a21U6cAsaZgQN5guP8+Q==,type:str]
-    authentication.ldap.password.txt: ENC[AES256_GCM,data:q8tYuSUFQJ3Jdr5EOfLVMgeip04HAr/usNHeajzo,iv:tUAIVDsY1Dyy5+bW9uzojEt/3Sl8lf4rNtMHxmz2my4=,tag:Y80hkvF70B9h+OHbY5xqMw==,type:str]
-    storage.encryption.key: ENC[AES256_GCM,data:OzYgzZItaZeQV73e48INaRsW+3CpNDy5JeUa8iDd,iv:CfZUS+CgfwNoun6JTtpqiZcFDxiAMTOrIge3pB9G13Y=,tag:QoyYrB2IFeT6FP68NiGLJA==,type:str]
-    storage.postgresql.password.txt: ENC[AES256_GCM,data:aRENQRc2OtnG2dvcpTfhXvw1qUGkzdCzl4tSYzQg,iv:RyUdEx5bLsiIiEsQGpizytm4q/2h8iw7hUfoyPLUiUk=,tag:6W0V4VfG7ZCyXZHFQAzezQ==,type:str]
+    identity_validation.reset_password.jwt.hmac.key: ENC[AES256_GCM,data:v+Rtgukn+VLAqS4lR+TKqsgzdCW7EVjGPPTq3cFeXkxBSHiVhJKrntvmKEx5ka1jw0GlF2Yw9foLw5TaWGo2uH9KtJPcKfKP5xgXxOoLVD47AOYnKB55uzUS,iv:ihWOJ2vpd8Q+DseETHJczzXlpbhtKWEIO0ILIleVrfA=,tag:2kNXRD6oTukNu5bNTQj/8Q==,type:str]
+    session.encryption.key: ENC[AES256_GCM,data:KbPlcO4TS3JFnVEvwje5zEvAZZPyAUDbyPHz8kx4,iv:zbvpfKeqBNcf5wsT0F2Mqj9DhsuBM1FZe3UKgnxBAEk=,tag:EKcHzLMd8sgZ307VfNsIkg==,type:str]
+    session.redis.password.txt: ENC[AES256_GCM,data:lhSqdoqABTH4ZzxJHt0vJTTzrzMzAdnGoRdeaGFW,iv:4ZAdaumqYlN3iCwvbn3PV5CYPRJFhGWwDkMQ1+voCPo=,tag:Os+w2rpmE6BMx7PMaI3aWA==,type:str]
+    authentication.ldap.password.txt: ENC[AES256_GCM,data:xjFByHXEBXxWMtwUUoXqBP7xl2xzJvntoK1qaVXW,iv:9UrJ0mOH4aF/t/7hczjsgPVLjCFDM1RervH7MMsoxNY=,tag:jkrxhRdzF0aXg2tPhOJ9qQ==,type:str]
+    storage.encryption.key: ENC[AES256_GCM,data:SZFHPVuvQ1OOkv0EMgm9FGFyii0Dt0mCRxwEDnCz,iv:lYdYb9aP0/Pm3VyPDFWQbydjgp7HdPJV0/cAmKc3Zns=,tag:cVJUi3wWjpue/3A4d5BVbw==,type:str]
+    storage.postgres.password.txt: ENC[AES256_GCM,data:O6zb36+mepMTuRsTkdugpq46nlcAlhjw5JHyUNZV,iv:LZdAGmoltvDytFmbMEvCxuiDRqh75GMDpte3rNTunkc=,tag:m/pVyxmYjl6mBU74gYE/9Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,14 +20,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZNGJsckJNWkJGWVZpS2VU
-            VlVoSVpoTnExWTR2emZPN2ZtMGdyVmhsVGgwCi8weHRwVmRWMUpJNDlSZUNybm5o
-            S3RWTXdqTzVPSmRkRXF3TUxnVUVBb3MKLS0tIDJDK3BFMHZ5MjNCQythaDVERktX
-            YUVScUswY3c5ZU5NNTV1WXNWeHJrWjQKQQfJ87TNhIhYnG1yrjA0xuzWUrgTZsdb
-            uHDC0vsAF+a1hP12xM0bGgPDPwML/JfCDU/mQ9UOplpgkPfs2ALpKQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvZ1hWQUVsdkt0Z0t1ajBI
+            dVMyWG9sZjQ3dldnQXdEa2l1YUZSWVkxdWkwClF5OXRQRVZ3eFJUMUZrMnY2Z3R0
+            OW1IbWhrTG03VFZTMjZhR1gwbFpHeXMKLS0tIDZBdG1kQS9CSkxHaUh0VEtXRkMv
+            QXgwRWhCZlhOK0Uza255d3ZRWjQ5eXMKHKqyVv5RAEqD2+VvJbZSpaREJJNC2Loe
+            j7DjkGNGUqLBZyYyUEqaohz9FNqp4F9vfd9A5tt+m/GPMacS+PTjew==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-18T04:21:08Z"
-    mac: ENC[AES256_GCM,data:5Yy77amxpLNJ7sWbgo3DRYiS5BLei8xH+LazDRip3SoB+HvUe7RuUvZIVWZ0duFkJ3VXT1t1twYik2Me8o3/lXppKcWUwyTED5D5NSP8Wx2vFEhMYkAHlugjxLt2q0v/i+TFUEeVrsOpbbSHPWR3xG0N/Hl+81Jh2IXg1pZTzPE=,iv:tHRE3VU7be8lLi7gaMzFX3QYH2jY+7FNI+FWyfWY+O4=,tag:gkJNY/na9KxiKh5frT4uUw==,type:str]
+    lastmodified: "2024-05-18T04:24:53Z"
+    mac: ENC[AES256_GCM,data:M1o9rx6h7HWc1LQTfhasdV0nIMDP3zVDDuFFu6y1IQwqVv6Q0Rx3u/TDC9nJp8GvA7rdFpBytadJOpTVgkPWOeIPT7cy7Gbm3E0Ok3ok422/Riv/C+2gxZA4BE98E8XDFTIXXHCnq2keLqmTKJZX7s/+1zMoPmemI8/j9pqJY4Q=,iv:VfM6rKCX22LZmKvYXXrlDdk+7++uJxpdEXyJ7peZeGI=,tag:+JIiEGuxXn7vvsoweXmxdg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
