--- a/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
@@ -63,7 +63,7 @@ spec:
         ldap:
           enabled: true
           implementation: custom
-          address: ldap://openldap.auth.svc.cluster.local:389
+          address: 'ldap://openldap.auth.svc.cluster.local:389'
           base_dn: "${SECRET_LDAP_BASE_DN}"
           username_attribute: uid
           additional_users_dn: ou=people
@@ -85,7 +85,7 @@ spec:
       storage:
         postgres:
           enabled: true
-          host: authelia-postgresql.auth.svc.cluster.local
+          address: 'tcp://authelia-postgresql.auth.svc.cluster.local'
           port: 5432
           username: authelia
           database: authelia
