--- a/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
@@ -89,6 +89,8 @@ spec:
           username: authelia
           database: authelia
           schema: public
+          tls:
+            enabled: false
       notifier:
         smtp:
           enabled: true
