attempt to swtich over to app template for authelia

--- a/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/secret.sops.yaml
@@ -5,12 +5,12 @@ metadata:
     namespace: auth
 type: Opaque
 stringData:
-    identity_validation.reset_password.jwt.hmac.key: ENC[AES256_GCM,data:v+Rtgukn+VLAqS4lR+TKqsgzdCW7EVjGPPTq3cFeXkxBSHiVhJKrntvmKEx5ka1jw0GlF2Yw9foLw5TaWGo2uH9KtJPcKfKP5xgXxOoLVD47AOYnKB55uzUS,iv:ihWOJ2vpd8Q+DseETHJczzXlpbhtKWEIO0ILIleVrfA=,tag:2kNXRD6oTukNu5bNTQj/8Q==,type:str]
-    session.encryption.key: ENC[AES256_GCM,data:KbPlcO4TS3JFnVEvwje5zEvAZZPyAUDbyPHz8kx4,iv:zbvpfKeqBNcf5wsT0F2Mqj9DhsuBM1FZe3UKgnxBAEk=,tag:EKcHzLMd8sgZ307VfNsIkg==,type:str]
-    session.redis.password.txt: ENC[AES256_GCM,data:lhSqdoqABTH4ZzxJHt0vJTTzrzMzAdnGoRdeaGFW,iv:4ZAdaumqYlN3iCwvbn3PV5CYPRJFhGWwDkMQ1+voCPo=,tag:Os+w2rpmE6BMx7PMaI3aWA==,type:str]
-    authentication.ldap.password.txt: ENC[AES256_GCM,data:xjFByHXEBXxWMtwUUoXqBP7xl2xzJvntoK1qaVXW,iv:9UrJ0mOH4aF/t/7hczjsgPVLjCFDM1RervH7MMsoxNY=,tag:jkrxhRdzF0aXg2tPhOJ9qQ==,type:str]
-    storage.encryption.key: ENC[AES256_GCM,data:SZFHPVuvQ1OOkv0EMgm9FGFyii0Dt0mCRxwEDnCz,iv:lYdYb9aP0/Pm3VyPDFWQbydjgp7HdPJV0/cAmKc3Zns=,tag:cVJUi3wWjpue/3A4d5BVbw==,type:str]
-    storage.postgres.password.txt: ENC[AES256_GCM,data:O6zb36+mepMTuRsTkdugpq46nlcAlhjw5JHyUNZV,iv:LZdAGmoltvDytFmbMEvCxuiDRqh75GMDpte3rNTunkc=,tag:m/pVyxmYjl6mBU74gYE/9Q==,type:str]
+    AUTHELIA_IDENTITY_VALIDATION_RESET_PASSWORD_JWT_SECRET: ENC[AES256_GCM,data:FdVLB17eCe7CYkkDj/rlwOGgXmUC4E3iKq4rvnfPSbiT65yW8nKquESGwMdcN3CtehlHt1Z0FkpbCLwTi+B3qpxW/ay9J6w7jAY86pF1WdEifJoTqd5d8UPC,iv:9wigUhdYmhrT4lPCCutQhMKJAc0mSNdo9DAkH3eQnWA=,tag:C2rzxvu6OvSQLbmSRYvcBw==,type:str]
+    AUTHELIA_SESSION_SECRET: ENC[AES256_GCM,data:NIuEQEQKtxb5hhYOo21bvDIvvwm61hPVGOv4nMgd,iv:F5vcLDZV6HjlYfUUgKlqYfH5s97dSV+TCQb0GlzHpBM=,tag:DDEUgwGPRWfs6oJLd9TFxw==,type:str]
+    AUTHELIA_SESSION_REDIS_PASSWORD: ENC[AES256_GCM,data:OIKIrHf4YYI5zDPgSid0YvZrmcr5+dweuT8QgZ9r,iv:/TTUchDIi5aPDwF5BvHKz0gDRboyh9DRt/P0yV5+MZU=,tag:iDn5dSaJM3t7t72LujpFWg==,type:str]
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD: ENC[AES256_GCM,data:r8M4G8+RyDfsQBIu9mHfnlgznvDqL4dNLkOFArfx,iv:ZLqoqT6/lfQCZFv4YZgA040eqMZwH7kzBDpbzvA/GAk=,tag:NrZFWnLUPef5/wpIJ+YpuQ==,type:str]
+    AUTHELIA_STORAGE_ENCRYPTION_KEY: ENC[AES256_GCM,data:wKCPOr6Me0BJB14ucIpnd6WSX0RrnCNutID13gEl,iv:GRL2CAFfdEOhlLeOTctbvTZHc4qyVnNzSIwzR4hj2zQ=,tag:4LDtcTOEsDLbEpymBXtp7g==,type:str]
+    AUTHELIA_STORAGE_POSTGRES_PASSWORD: ENC[AES256_GCM,data:4X/KQJkhjOfSi5wsGcERZ/+rCH7GBvWtn29UNqO0,iv:N6GLK6aHo087eTNsvh2icq1k60MKtrzrrZst2bXXYHA=,tag:LRhSyZMwNiYSc9JN56rXXw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,14 +20,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvZ1hWQUVsdkt0Z0t1ajBI
-            dVMyWG9sZjQ3dldnQXdEa2l1YUZSWVkxdWkwClF5OXRQRVZ3eFJUMUZrMnY2Z3R0
-            OW1IbWhrTG03VFZTMjZhR1gwbFpHeXMKLS0tIDZBdG1kQS9CSkxHaUh0VEtXRkMv
-            QXgwRWhCZlhOK0Uza255d3ZRWjQ5eXMKHKqyVv5RAEqD2+VvJbZSpaREJJNC2Loe
-            j7DjkGNGUqLBZyYyUEqaohz9FNqp4F9vfd9A5tt+m/GPMacS+PTjew==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUMFNMRHZ4TlU2VWNzWk9V
+            eDlJYWMxV0RIWGVzRzE3bUExTGM5QjNDUGprCklLNjFRYm5ZVUp4K0RZSVVkVG9k
+            OFd0ZXc0enU3QUlJYWxsQUhsR2Q4MkkKLS0tIEtYRlhlYnhWM0doRkRxbWp0SEhl
+            eVNsLzBQempKQVNxWjU3WDFqK1FxTGMKwHZxiWcdZ8/r5npAHw8GcVV6tMTTgpR7
+            buiCSYm4uXVXJsQDEaCC67MfFQCSpTxI3eNouGCIuTfHGGoSgv2GjA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-18T04:24:53Z"
-    mac: ENC[AES256_GCM,data:M1o9rx6h7HWc1LQTfhasdV0nIMDP3zVDDuFFu6y1IQwqVv6Q0Rx3u/TDC9nJp8GvA7rdFpBytadJOpTVgkPWOeIPT7cy7Gbm3E0Ok3ok422/Riv/C+2gxZA4BE98E8XDFTIXXHCnq2keLqmTKJZX7s/+1zMoPmemI8/j9pqJY4Q=,iv:VfM6rKCX22LZmKvYXXrlDdk+7++uJxpdEXyJ7peZeGI=,tag:+JIiEGuxXn7vvsoweXmxdg==,type:str]
+    lastmodified: "2024-05-18T05:13:45Z"
+    mac: ENC[AES256_GCM,data:6c/7TMJ8XFlIVGdFKM/dk8l4Dr+3qQahYmeG8//rH1iQFMmnyi6Hkhi/PA8hFnzTqNqsTXbls7ApCDH887f4qN//a4gLiFQriHKfM37aWXFgL2G5ieGtlbSEB06qVFEikKqeKgxCV3DfFCFSLlfZvzBjr0BuQ+QCK73SqUZ68bs=,iv:SEY0rapygtvIWz5RMn/qaf9/8Fcxek7FqnQ6NHVHmx0=,tag:tNPWu7k1HylNp29eSB6DYw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
