--- a/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
@@ -2,105 +2,109 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: authelia
-  namespace: auth
+  name: &app authelia
 spec:
-  interval: 5m
+  interval: 30m
   chart:
     spec:
-      chart: authelia
-      version: 0.9.0-beta3
+      chart: app-template
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
-        name: authelia-charts
+        name: bjw-s-charts
         namespace: flux-system
-      interval: 5m
-  dependsOn:
-    - name: openldap
-      namespace: auth
-    - name: authelia-redis
-      namespace: auth
-    - name: authelia-postgresql
-      namespace: auth
-    - name: traefik
-      namespace: networking
   install:
-    createNamespace: true
     remediation:
       retries: 3
   upgrade:
+    cleanupOnFail: true
     remediation:
+      strategy: rollback
       retries: 3
+  dependsOn:
+    - name: glauth
+      namespace: default
   values:
-    domain: "${SECRET_PUBLIC_DOMAIN}"
+    controllers:
+      authelia:
+        replicas: 2
+        strategy: RollingUpdate
+        containers:
+          app:
+            image:
+              repository: ghcr.io/authelia/authelia
+              tag: 4.38.8@sha256:19375b10024caeef4e0b119a6247beae84cbaa02c846cfd750e92dea910d4b6a
+            env:
+              AUTHELIA_SERVER_ADDRESS: tcp://0.0.0.0:80
+              AUTHELIA_SERVER_DISABLE_HEALTHCHECK: "true"
+              AUTHELIA_TELEMETRY_METRICS_ADDRESS: tcp://0.0.0.0:8080
+              AUTHELIA_TELEMETRY_METRICS_ENABLED: "true"
+              AUTHELIA_THEME: dark
+              X_AUTHELIA_CONFIG: /config/configuration.yaml
+              X_AUTHELIA_CONFIG_FILTERS: expand-env
+            envFrom:
+              - secretRef:
+                  name: authelia-secret
+            probes:
+              liveness: &probes
+                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /api/health
+                    port: &port 80
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
+            securityContext:
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
+              capabilities: { drop: ["ALL"] }
+            resources:
+              requests:
+                cpu: 10m
+              limits:
+                memory: 128Mi
+    defaultPodOptions:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 65534
+        runAsGroup: 65534
+        seccompProfile: { type: RuntimeDefault }
+      topologySpreadConstraints:
+        - maxSkew: 1
+          topologyKey: kubernetes.io/hostname
+          whenUnsatisfiable: DoNotSchedule
+          labelSelector:
+            matchLabels:
+              app.kubernetes.io/name: *app
+    service:
+      app:
+        controller: authelia
+        ports:
+          http:
+            port: *port
+          metrics:
+            port: 8080
     ingress:
-      enabled: true
-      ingressClassName: "traefik"
-      annotations:
-        traefik.ingress.kubernetes.io/router.entrypoints: websecure
-        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
-      traefikCRD:
-        enabled: true
-        disableIngressRoute: false
-        apiGroupOverride: 'traefik.io'
-        apiVersionOverride: 'v1alpha1'
-        entryPoints: 
-          - websecure
-    pod:
-      kind: Deployment
-      replicas: 3
-      env:
-      - name: TZ
-        value: "${TIMEZONE}"
-    configMap:
-      enabled: true
-      log:
-        ## Level of verbosity for logs: info, debug, trace.
-        level: info
-      theme: dark
-      default_2fa_method: totp
-      authentication_backend:
-        ldap:
-          enabled: true
-          implementation: custom
-          address: 'ldap://openldap.auth.svc.cluster.local:389'
-          base_dn: "${SECRET_LDAP_BASE_DN}"
-          username_attribute: uid
-          additional_users_dn: ou=people
-          user: "cn=admin,${SECRET_LDAP_BASE_DN}"
-          users_filter: (&({username_attribute}={input})(objectClass=posixAccount))
-          groups_filter: (&(member={dn})(objectclass=posixGroup))
-          group_name_attribute: cn
-      access_control:
-        default_policy: two_factor
-      session:
-        name: "${SECRET_PUBLIC_DOMAIN}_auth_session"
-        cookies:
-        - domain: "${SECRET_PUBLIC_DOMAIN}"
-        redis:
-          enabled: true
-          enabledSecret: true
-          host: authelia-redis-master.auth.svc.cluster.local
-          port: 6379
-      storage:
-        postgres:
-          enabled: true
-          address: 'tcp://authelia-postgresql.auth.svc.cluster.local:5432'
-          username: authelia
-          database: authelia
-          schema: public
-          tls:
-            enabled: false
-      notifier:
-        smtp:
-          enabled: true
-          address: "submission://${SECRET_SMTP_HOST}:587"
-          sender: "${SECRET_NOTIFICATION_EMAIL}"
-          identifier: "${SECRET_PUBLIC_DOMAIN}"
-          subject: "[${SECRET_PUBLIC_DOMAIN} auth] {title}"
-          startup_check_address: "${SECRET_TEST_EMAIL}"
-          # username: "${SECRET_ADMIN_EMAIL}"
-          password:
-            disabled: true
-    secret:
-      existingSecret: authelia-secrets
+      app:
+        annotations:
+          traefik.ingress.kubernetes.io/router.entrypoints: websecure
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+        hosts:
+          - host: "auth.${SECRET_LDAP_BASE_DN}"
+            paths:
+              - path: /
+                service:
+                  identifier: app
+                  port: http
+    persistence:
+      config:
+        type: configMap
+        name: authelia-configmap
+        globalMounts:
+          - path: /config/configuration.yaml
+            subPath: configuration.yaml
+            readOnly: true
