add in configmap

--- a/kubernetes/cluster0/apps/auth/authelia/app/kustomization.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/kustomization.yaml
@@ -8,4 +8,9 @@ labels:
   - pairs:
       app.kubernetes.io/name: authelia
       app.kubernetes.io/instance: authelia
-
+configMapGenerator:
+  - name: authelia-configmap
+    files:
+      - configuration.yaml=./config/configuration.yaml
+generatorOptions:
+  disableNameSuffixHash: true
