--- a/kubernetes/cluster0/apps/auth/authelia/app/kustomization.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/kustomization.yaml
@@ -10,6 +10,7 @@ labels:
       app.kubernetes.io/instance: authelia
 configMapGenerator:
   - name: authelia-configmap
+    namespace: auth
     files:
       - configuration.yaml=./config/configuration.yaml
 generatorOptions:
