Revert "move configuration.yaml into helm-release file"
This reverts commit e4d613e537a7590e5be99e59a419ec3c13d3c5d0.

--- a/kubernetes/cluster0/apps/auth/authelia/app/kustomization.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/kustomization.yaml
@@ -8,3 +8,10 @@ labels:
   - pairs:
       app.kubernetes.io/name: authelia
       app.kubernetes.io/instance: authelia
+configMapGenerator:
+  - name: authelia-configmap
+    namespace: auth
+    files:
+      - configuration.yaml=./config/configuration.yaml
+generatorOptions:
+  disableNameSuffixHash: true
