--- a/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
@@ -101,7 +101,7 @@ spec:
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
         hosts:
-          - host: "auth.${SECRET_LDAP_BASE_DN}"
+          - host: "auth.${SECRET_PUBLIC_DOMAIN}"
             paths:
               - path: /
                 service:
