fix secret ref in authelia

--- a/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
@@ -51,7 +51,7 @@ spec:
               X_AUTHELIA_CONFIG_FILTERS: expand-env
             envFrom:
               - secretRef:
-                  name: authelia-secret
+                  name: authelia-secrets
             probes:
               liveness: &probes
                 enabled: true
