--- a/kubernetes/cluster0/apps/auth/authelia/app/middleware.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/middleware.yaml
@@ -10,7 +10,7 @@ spec:
       - name: forwardauth-authelia
         namespace: auth
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: forwardauth-authelia
