--- a/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
@@ -100,6 +100,7 @@ spec:
         annotations:
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+          traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia@kubernetescrd
         hosts:
           - host: "auth.${SECRET_PUBLIC_DOMAIN}"
             paths:
