--- a/kubernetes/cluster0/apps/auth/authelia/app/middleware.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/middleware.yaml
@@ -25,7 +25,7 @@ spec:
       - Remote-Email
       - Remote-Groups
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 namespace: auth
 metadata:
@@ -36,7 +36,7 @@ spec:
       - name: headers-authelia
         namespace: auth
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 namespace: auth
 metadata:
