fix syncthing mount

--- a/kubernetes/cluster0/apps/media/syncthing/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/syncthing/app/helm-release.yaml
@@ -75,5 +75,5 @@ spec:
         existingClaim: pvc-syncthing
         advancedMounts:
           main:
-            main:
+            app:
               - path: /var/syncthing
