fix prowlarr mount

--- a/kubernetes/cluster0/apps/media/prowlarr/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/prowlarr/app/helm-release.yaml
@@ -65,5 +65,5 @@ spec:
         existingClaim: pvc-prowlarr
         advancedMounts:
           main:
-            main:
+            app:
               - path: /config
