--- a/kubernetes/cluster0/apps/auth/authelia/app/config/configuration.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/config/configuration.yaml
@@ -1,37 +1,14 @@
 # yaml-language-server: $schema=https://www.authelia.com/schemas/v4.38/json-schema/configuration.json
-theme: 'dark'
-default_2fa_method: 'totp'
+theme: dark
+default_2fa_method: totp
 log:
-  level: 'info'
-  format: 'text'
-  file_path: ''
-  keep_stdout: true
+  level: info
 telemetry:
   metrics:
     enabled: false
-identity_validation:
-  elevated_session:
-    code_lifespan: '5 minutes'
-    elevation_lifespan: '10 minutes'
-    require_second_factor: false
-    skip_second_factor: false
-  reset_password:
-    jwt_lifespan: '5 minutes'
-    jwt_algorithm: 'HS256'
 totp:
   disable: false
-  issuer: 'Authelia'
-  skew: 1
-  secret_size: 32
-  algorithm: 'SHA1'
-  digits: 6
-  period: 30
-  allowed_algorithms:
-    - 'SHA1'
-  allowed_digits:
-    - 6
-  allowed_periods:
-    - 30
+  issuer: auth.${SECRET_PUBLIC_DOMAIN}
 webauthn:
   disable: false
   display_name: 'Authelia'
@@ -74,24 +51,24 @@ password_policy:
     enabled: false
     min_score: 0
 session:
+  same_site: lax
   name: '${SECRET_PUBLIC_DOMAIN}_auth_session'
   same_site: 'lax'
-  inactivity: '5 minutes'
-  expiration: '1 hour'
-  remember_me: '5 minutes'
+  inactivity: 5m
+  expiration: 1h
+  remember_me: 1M
   cookies:
-    - domain: '${SECRET_PUBLIC_DOMAIN}'
-      authelia_url: 'https://auth.${SECRET_PUBLIC_DOMAIN}'
+    - name: authelia-home-ops
+      domain: ${SECRET_PUBLIC_DOMAIN}
+      authelia_url: https://auth.${SECRET_PUBLIC_DOMAIN}
   redis:
     host: 'authelia-redis-master.auth.svc.cluster.local'
     port: 6379
     database_index: 0
-    maximum_active_connections: 8
-    minimum_idle_connections: 0
 regulation:
   max_retries: 3
-  find_time: '2 minutes'
-  ban_time: '5 minutes'
+  find_time: 2m
+  ban_time: 5m
 storage:
   postgres:
     address: 'tcp://authelia-postgresql.auth.svc.cluster.local:5432'
