--- a/kubernetes/cluster0/apps/home/kustomization.yaml
+++ b/kubernetes/cluster0/apps/home/kustomization.yaml
@@ -7,5 +7,6 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./home-assistant/ks.yaml
+  - ./immich/ks.yaml
   - ./mosquitto/ks.yaml
   - ./zigbee2mqtt/ks.yaml
