--- a/kubernetes/cluster0/apps/home/immich/shared/configmap.yaml
+++ b/kubernetes/cluster0/apps/home/immich/shared/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: immich-config
+  namespace: home
   labels:
     app.kubernetes.io/name: immich
 data:
