--- a/kubernetes/cluster0/apps/home/immich/shared/configmap.yaml
+++ b/kubernetes/cluster0/apps/home/immich/shared/configmap.yaml
@@ -12,6 +12,6 @@ data:
   DB_HOSTNAME: immich-db-postgresql.home.svc.cluster.local
   DB_USERNAME: immich
   DB_DATABASE_NAME: immich
-  REDIS_HOSTNAME: immich-redis.home.svc.cluster.local
+  REDIS_HOSTNAME: immich-redis-master.home.svc.cluster.local
   REDIS_PORT: "6379"
 
