--- a/kubernetes/cluster0/apps/home/immich/shared/configmap.yaml
+++ b/kubernetes/cluster0/apps/home/immich/shared/configmap.yaml
@@ -10,7 +10,7 @@ data:
   #IMMICH_WEB_URL: http://immich-web.home.svc.cluster.local:3000
   IMMICH_SERVER_URL: http://immich-server.home.svc.cluster.local:3001
   DB_HOSTNAME: immich-db-postgresql.home.svc.cluster.local
-  DB_USERNAME: immich
+  DB_USERNAME: postgres
   DB_DATABASE_NAME: immich
   REDIS_HOSTNAME: immich-redis-master.home.svc.cluster.local
   REDIS_PORT: "6379"
