--- a/kubernetes/cluster0/apps/home/immich/db/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/immich/db/helm-release.yaml
@@ -27,8 +27,8 @@ spec:
   values:
     image:
       registry: docker.io
-      repository: bitnami/postgresql
-      tag: 16.1.0-debian-11-r21
+      repository: tensorchord/pgvecto-rs
+      tag: pg14-v0.2.0@sha256:90724186f0a3517cf6914295b5ab410db9ce23190a2d9d0b9dd6463e3fa298f0
     auth:
       database: immich
       username: immich
