--- a/kubernetes/cluster0/apps/databases/kustomization.yaml
+++ b/kubernetes/cluster0/apps/databases/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
-  - ./cloudnative-pg
+  - ./cloudnative-pg/ks.yaml
