--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/app/secret.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 type: Opaque
 metadata:
     name: cloudnative-pg-secret
-    namespace: database
+    namespace: databases
 stringData:
     POSTGRES_SUPER_USER: ENC[AES256_GCM,data:5k22,iv:piK7rp5HPxomxtrxLdBB2JiUK6972xhyOWhs2tqZrTg=,tag:i82NB0W3UJsfqxaUPoiegA==,type:str]
     POSTGRES_SUPER_PASS: ENC[AES256_GCM,data:O45Z32knrKe6qmNj/vlZyTPdjNCCUbDyvsGILP4wTfXoV9kYYYzM2Ud0l38Fver0a+RRZxIl4cPrXyA3hHmegTX11Pik/24YqRp6dxO65+14Mbr4LX+TQOLpHnBbDH3AZbvqSqPZXBVqGae02f3zSwMd6j7s4QoE5G1PaM5tMhE=,iv:7MSwj3HFvtSgphuFJEFyGdijjZ1yIXkj7pLmJ9IopsI=,tag:GO3BnbPMys0F5CwWG/eocg==,type:str]
