--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/cluster.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/cluster.yaml
@@ -4,6 +4,7 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: postgres16
+  namespace: databases
 spec:
   instances: 3
   imageName: ghcr.io/tensorchord/cloudnative-pgvecto.rs:16.2-v0.2.0
