--- a/kubernetes/cluster0/apps/home/immich/server/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/immich/server/helm-release.yaml
@@ -32,8 +32,7 @@ spec:
               repository: ghcr.io/immich-app/immich-server
               tag: v1.106.4
             command: /bin/sh
-            args:
-              - ./start-server.sh
+            args: ["start.sh", "immich"]
             resources:
               requests:
                 cpu: 100m
