initdb for immich on pg

--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/cluster.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/cluster.yaml
@@ -35,3 +35,9 @@ spec:
     podMonitorMetricRelabelings:
       - { sourceLabels: ["cluster"], targetLabel: cnpg_cluster, action: replace }
       - { regex: cluster, action: labeldrop }
+  bootstrap:
+    initdb:
+      database: immich
+      owner: immich
+      secret:
+        name: immich
