change secret to basic auth

--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Secret
-type: Opaque
+type: kubernetes.io/basic-auth
 metadata:
     name: immich
     namespace: databases
-stringData:
-    username: ENC[AES256_GCM,data:apNI7qHY,iv:wQo4GgHk21zcjremiPZy6p6eEuLEH0LJm+TfqTkGA4Q=,tag:dXYMBW10Ga6EI5F6SuM5Lg==,type:str]
-    password: ENC[AES256_GCM,data:CHP4317mYQBA/aGXNSei2Yh6ulnHqH7MLfCYqtCHQCG2jatCF2pLMi0EctBOetL98qE=,iv:+skCBbKG4nZKdVVRh7X+miYoaGW51CnInoxxZGD236k=,tag:4iCmhcm70b/D+bvggAUPTQ==,type:str]
+data:
+    username: ENC[AES256_GCM,data:wsuaJAvd,iv:pF4+ImI2YiOt3BgFtrX1+/GfxXctBqs1hfmCXmBAy+k=,tag:2riIFRsQgTCwVwG6ezxezA==,type:str]
+    password: ENC[AES256_GCM,data:m1DjYTA6LoR2a+29AXwUld3xBTVleYpoFnsw2O2/87h9LOcULHK1HB339hW27vpKhmE=,iv:JGCJMVwWj/pjSrO7tKmaKWihq4AP/FASvAvlAnfCgak=,tag:gi52CjvDNg373FS/BG6W0w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlQ0JMWU1kdm1QM2lKdkl3
-            MmZPaE1zNmdJeVE0cXpUME13OTR2MS8yN0VFCkxqdkVUOVNZcTZQM0hXblRqTk0w
-            N2pDYlpQTDNtQ085QStOV2pJek1nVGcKLS0tIFlHdG5KaXUrNXRRMGFPRkFjSUNW
-            UnZwaUxhR01menFBRk5STUpuK1g1RFUK3e6APIZu56hV2nwwSewPu/7B7uintr9y
-            jAZUr5164UlsxGw+dPvFNzXZ4e+xjB1czqtLsAl/rNMF2MRJjqGtjQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXQ0t6d0RaSmNqQnA2Z0Ey
+            bmhhUFoxQldkTkxCTDFGQlh6aDlxQ1pCa3pZCnAwK1VmZnhZelh0Yjl2SWxUUUVB
+            eEVJYXp0MzVNdnN3dkRRalA0emZSSDgKLS0tIEhPVnpWQlNnMGRIcGVSUGV3NDJW
+            THpsR0lHQm9CdkRZNGZ0VExSRHRMT2cK3SQ4MmrdwiZGeGCBMpBOz1jI5sS62Vul
+            TxjfADRLSMGUiQtLHUKfcp6SJrUxoV174VvF3I83XZ6mZAllQono7w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-02T04:13:30Z"
-    mac: ENC[AES256_GCM,data:LXrW0EgBTKUU+6WQKX+Y5wyhGOoNGmxtdtiHsDexU/7xls2hoJPBDTTszua7gZsv8ZWFyZnJ0lKb8FkkmZx1lP3jWtFLKEv7GcjcCAEBcIoWh1Xko03kH2rWGR49w3DYVEKdBli83OfkYVIW/7MrXN1jw4lU1u7qlYfudjBz3iQ=,iv:gTTauTZvK87Kwvf9Yoogj0Puw/fDSW/2Vvi0YkrIXSY=,tag:EkYKQdNEdU/y1+1n3SJ5hA==,type:str]
+    lastmodified: "2024-07-02T04:20:48Z"
+    mac: ENC[AES256_GCM,data:iWpC5ioWli5bamK4GCL12Fw7sZxtv0Wv/gCqf0QmsR0GVg0gaHGxbG/Z3rSsa+kTQfhM6Robm7lphT7oJJzUWfjrifzuSiAqkX2e5gqyngITtF7/Ycogm41s9x24wH+d67LUariJmrcbhwZS9PaUuWGTPDsKMch8NoTIUWaQR+g=,iv:cg27FDxVE+B1qdg7bDOaNBSNVYd4E5zsJymstGCD8UA=,tag:U1f1r7F7GTzjp7OETi3ulA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
