revert secret change

--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Secret
-type: kubernetes.io/basic-auth
+type: Opaque
 metadata:
     name: immich
     namespace: databases
-data:
-    username: ENC[AES256_GCM,data:wsuaJAvd,iv:pF4+ImI2YiOt3BgFtrX1+/GfxXctBqs1hfmCXmBAy+k=,tag:2riIFRsQgTCwVwG6ezxezA==,type:str]
-    password: ENC[AES256_GCM,data:m1DjYTA6LoR2a+29AXwUld3xBTVleYpoFnsw2O2/87h9LOcULHK1HB339hW27vpKhmE=,iv:JGCJMVwWj/pjSrO7tKmaKWihq4AP/FASvAvlAnfCgak=,tag:gi52CjvDNg373FS/BG6W0w==,type:str]
+stringData:
+    username: ENC[AES256_GCM,data:NkMXHiFv,iv:meb+M4oXIiR88mzhYF6eYV0iHFQTWCXmEGFkl1rMLS8=,tag:T6Hp2B7eyodqNWv3wCMeZw==,type:str]
+    password: ENC[AES256_GCM,data:5caCvFZu/FH0yEcPDcxEpzk1xPFh/ugpUXxFH5sl+gC+I2EoOT14oCgQLz6c0DqMs1g=,iv:AXDHSBAJhUiMfQLrX6sApy5xGug21CX+GQwbsvrpkEg=,tag:PX8xXmSrRdonvMIs8s7Zyg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXQ0t6d0RaSmNqQnA2Z0Ey
-            bmhhUFoxQldkTkxCTDFGQlh6aDlxQ1pCa3pZCnAwK1VmZnhZelh0Yjl2SWxUUUVB
-            eEVJYXp0MzVNdnN3dkRRalA0emZSSDgKLS0tIEhPVnpWQlNnMGRIcGVSUGV3NDJW
-            THpsR0lHQm9CdkRZNGZ0VExSRHRMT2cK3SQ4MmrdwiZGeGCBMpBOz1jI5sS62Vul
-            TxjfADRLSMGUiQtLHUKfcp6SJrUxoV174VvF3I83XZ6mZAllQono7w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmUWlJSGhmZ2dLVEcxUXJh
+            clBtbndzMFU3d2FSaWY5ZTJ4a2xtV1gwekZnCkZnS3V0REtZeThISndNQmV5UTBP
+            RnJremZydHlYY21yTU9EOFgzY1ExU1UKLS0tIG9TM0x4djhQTEZKZDJtZzM5R3du
+            QnRKbHRscVRNSStyZmNYc2dHWDZoT3cKY9y3jEmkGcCLmq6qWkXdNavPIdAosLEy
+            opXWFwa1IKEazV6nRnvDfUZ6hwVlM9U+6H8rhaLCqf3h7WX8ul1zNg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-02T04:20:48Z"
-    mac: ENC[AES256_GCM,data:iWpC5ioWli5bamK4GCL12Fw7sZxtv0Wv/gCqf0QmsR0GVg0gaHGxbG/Z3rSsa+kTQfhM6Robm7lphT7oJJzUWfjrifzuSiAqkX2e5gqyngITtF7/Ycogm41s9x24wH+d67LUariJmrcbhwZS9PaUuWGTPDsKMch8NoTIUWaQR+g=,iv:cg27FDxVE+B1qdg7bDOaNBSNVYd4E5zsJymstGCD8UA=,tag:U1f1r7F7GTzjp7OETi3ulA==,type:str]
+    lastmodified: "2024-07-02T04:25:52Z"
+    mac: ENC[AES256_GCM,data:3fRqmmDNfopAgkZ1WUoAy9kwUyGN+d0+/2B7d6erM1aAAmPmRZJa3SinqkBWdJlwJIJnJgEodSKrknkPMt6XX8QdW5RDbkcjD4BrhEhDp+OmPAMs0/lQDj5WFHGFQKx67UAPNSwKOoNhZjKaxs2GDyJ50WF3Xp6KFk8FTyhzgDw=,iv:Wh0QuTXIfYbb+r7ompAQl3LywSPxUld876Wcvkj0/6M=,tag:RzkRqUulCfLMMLVmJZ5vjw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
