basic auth still

--- a/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
+++ b/kubernetes/cluster0/apps/databases/cloudnative-pg/cluster/immich.secret.sops.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Secret
-type: Opaque
+type: kubernetes.io/basic-auth
 metadata:
     name: immich
     namespace: databases
 stringData:
-    username: ENC[AES256_GCM,data:NkMXHiFv,iv:meb+M4oXIiR88mzhYF6eYV0iHFQTWCXmEGFkl1rMLS8=,tag:T6Hp2B7eyodqNWv3wCMeZw==,type:str]
-    password: ENC[AES256_GCM,data:5caCvFZu/FH0yEcPDcxEpzk1xPFh/ugpUXxFH5sl+gC+I2EoOT14oCgQLz6c0DqMs1g=,iv:AXDHSBAJhUiMfQLrX6sApy5xGug21CX+GQwbsvrpkEg=,tag:PX8xXmSrRdonvMIs8s7Zyg==,type:str]
+    username: ENC[AES256_GCM,data:RO1v97Op,iv:bYlMM9qrI+vJ43EftLdQNlA3AV9OwxUsMzYWPA9Lt34=,tag:VK+ZiqUetJ/iLq+WEO69XA==,type:str]
+    password: ENC[AES256_GCM,data:AaOrF2NkF/ltXkTtHUvjkHwd4cnqQDEeFB3qphbmGenJWuO6B6cNkyo44PO/5nJFcGI=,iv:U6l3kQUIxy+QTxzNZm1yiKYTC9W8e2XJNzEQVW26wKU=,tag:8wNE0XPfl4V1YPl+gxYG5A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmUWlJSGhmZ2dLVEcxUXJh
-            clBtbndzMFU3d2FSaWY5ZTJ4a2xtV1gwekZnCkZnS3V0REtZeThISndNQmV5UTBP
-            RnJremZydHlYY21yTU9EOFgzY1ExU1UKLS0tIG9TM0x4djhQTEZKZDJtZzM5R3du
-            QnRKbHRscVRNSStyZmNYc2dHWDZoT3cKY9y3jEmkGcCLmq6qWkXdNavPIdAosLEy
-            opXWFwa1IKEazV6nRnvDfUZ6hwVlM9U+6H8rhaLCqf3h7WX8ul1zNg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtMElBRHMxRlExNjcvbW9Q
+            dksvdUkwS1JtcE83QjFHSVdPMkZnK2cwM1VJCjMrWjZKazdTekdhZ1JPc3NMSVl5
+            ci9uYnd1M2xkdHNaaU5EME9WVTJLcUEKLS0tIHQ5NjNhKzY0aE9Ub1Z3S2F6ZVU2
+            OWlHQ1YwYkhFZGpCWVBsRjhXU2pQZ28Kk1gbrPd4SRs2EBc1wrU1EJczooA6NprV
+            CpEfkxVvPvT1XZLdgLTpYURR9Mfpzpgzi2exhqnqAE+zirV2njPWzg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-02T04:25:52Z"
-    mac: ENC[AES256_GCM,data:3fRqmmDNfopAgkZ1WUoAy9kwUyGN+d0+/2B7d6erM1aAAmPmRZJa3SinqkBWdJlwJIJnJgEodSKrknkPMt6XX8QdW5RDbkcjD4BrhEhDp+OmPAMs0/lQDj5WFHGFQKx67UAPNSwKOoNhZjKaxs2GDyJ50WF3Xp6KFk8FTyhzgDw=,iv:Wh0QuTXIfYbb+r7ompAQl3LywSPxUld876Wcvkj0/6M=,tag:RzkRqUulCfLMMLVmJZ5vjw==,type:str]
+    lastmodified: "2024-07-02T04:26:50Z"
+    mac: ENC[AES256_GCM,data:btdwmzJhT70PmiDgF6k7OG33kf3ohsP+8L9MnpHFBKDjttzNSPIT+xTqNdNU+2Nm7bzUapPt5LGf1ytlZ3IZPOo+jS/yhnf0I3IUsQpNkEDJ3C148dfkhe3udy3kqc+U9MegxsOcI/qBLPGzMMrKoLsDOEL9ZfpN5RnOpttny1Q=,iv:UP2j9h1L0lI6meElEkJAFP7QlAN6NMhceetbUJnXFkg=,tag:UniYg4IoIbT8hpI8QUWyzw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
